fix clear float, add gap

--- a/src/components/reply-form/reply-form.module.css
+++ b/src/components/reply-form/reply-form.module.css
@@ -83,6 +83,9 @@
   font-size: 12px;
   padding-bottom: 2px;
   padding-top: 2px;
+  clear: both;
+  display: flex;
+  gap: 10px;
 }
 
 .markdownHelp {
